update win scripts